--- a/app/assets/styles/index.less
+++ b/app/assets/styles/index.less
@@ -1,4 +1,4 @@
-@white_color: #ececec;
+@white_color: #f9f9f9;
 @color: #333;
 @padding: 24px;
 
@@ -20,14 +20,16 @@ body{
 	color: @color;
 	font-size: 16px;
 	background: @white_color;
-	height: auto;
+	height: 100%;
 	min-height: 100%;
 }
 
+.app, main-context{height: 100%}
 header{
 	background: @color;
 	padding: @padding;
 	text-align: center;
+	max-height: 80px;
 	h1{
 		margin: 0;
 		color: @white_color;
@@ -37,15 +39,21 @@ header{
 
 main{
 	padding: @padding;
+	height: calc(~'100% - 80px');
 	h2{
 		margin: 0 0 @padding;
 		display: block;
-		background: darken(@white_color, 10%);
+		text-align: center;
+		font-weight: normal;
 		font-size: 18px;
-		padding: @padding / 2;
-		border-radius: 2px;
+		padding: @padding;
+	}
+	h3{
+		margin: 0 0 @padding/2;
 	}
 	.info-block{
+		margin: 0 0 @padding;
+		width: 100%;
 		ul{
 			margin: 0;
 			padding: 0;
@@ -61,11 +69,56 @@ main{
 			}
 		}
 	}
+	.sensors{
+		display: flex;
+		width: 100%;
+		justify-content: space-between;
+		.item{
+			width: 48%;
+			.inside{
+				background: white;
+				border-radius: 2px;
+				padding: @padding;
+				box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);
+			}
+			ul{
+				margin: 0;
+				padding: 0;
+				li{
+					list-style: none;
+					display: flex;
+					width: 100%;
+					align-items: center;
+					span{
+						display: block;
+						width: 20px;
+						height: 20px;
+						border-radius: 50%;
+						margin-left: 10px;
+						&.active{
+							background: #54c089;
+						}
+						&.disabled{
+							background: #da5e51;
+						}
+					}
+				}
+
+			}
+		}
+	}
+}
+
+.error{
+	color: lighten(@color, 30%);
+	&.no-sensors{
+		margin-top: 170px;
+	}
 }
 
 .loading{
 	display: flex;
-	height: 300px;
+	height: 100%;
 	width: 100%;
 	justify-content: center;
 	align-items: center;
